--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing all the articles.</h1>
 <p>
-    <%= link_to "Create new article", new_article_path %>
+    <%= link_to "Home", root_path %> | <%= link_to "Create new article", new_article_path %>
 </p>
 
 <table>
@@ -14,6 +14,7 @@
         <td><%= a.description %></td>
         <td><%= link_to 'Edit', edit_article_path(a) %></td>
         <td><%= link_to 'Show', article_path(a) %></td>
+        <td><%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
     <% end %>
 </table>
