--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>This is the home page of my blog app</h1>
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign-up Now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
 
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
+<!-- <%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %> --> 
