--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,27 @@
-<h1>Listing all the articles.</h1>
-<p>
-    <%= link_to "Home", root_path %> | <%= link_to "Create new article", new_article_path %>
-</p>
+<h1 align="center">Listing all the articles:</h1>
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-    <% @allarticles.each do |a| %>
-    <tr>
-        <td><%= a.title %></td>
-        <td><%= a.description %></td>
-        <td><%= link_to 'Edit', edit_article_path(a) %></td>
-        <td><%= link_to 'Show', article_path(a) %></td>
-        <td><%= link_to 'Delete', article_path(a), method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-    <% end %>
-</table>
+<!-- <%= link_to "Home", root_path %> | <%= link_to "Create new article", new_article_path %> -->
+
+
+<% @allarticles.each do |a| %>
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <div class="well well-lg">
+                <div class="article-title">
+                    <%= link_to a.title, article_path(a) %>
+                </div>
+                <div class="article-body">
+                    <%= truncate(a.description, length: 100) %>
+                </div>
+                <div class="article-actions">
+                    <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %> 
+                    &nbsp;
+                    <%= link_to "Delete", article_path(a), method: :delete, 
+                                                                data: { confirm: "Are you sure you want to delete the article?" }, 
+                                                                class: "btn btn-xs btn-danger" %>
+                </div>
+            </div>
+        </div>
+    </div>
+   
+<% end %>
