--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,15 @@
                     <%= link_to a.title, article_path(a) %>
                 </div>
                 <div class="article-body">
-                    <%= truncate(a.description, length: 100) %>
+                    <%= truncate(a.description, length: 100) %> 
+                    <br>
+                    <div> class="article-meta-details">
+                        <small>
+                            <b>Created by:</b> <%= a.user.username if a.user %> | 
+                            <b>Created:</b> <%= time_ago_in_words(a.created_at) %> ago |  
+                            <b>Last Updated: </b> <%= time_ago_in_words(a.updated_at) %> ago.
+                        </small>
+                    </div>
                 </div>
                 <div class="article-actions">
                     <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %> 
