Completed Authentication System

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,12 @@
 
 <!-- <%= link_to "Home", root_path %> | <%= link_to "Create new article", new_article_path %> -->
 
-<%= render 'article', obj: @allarticles %>
+<div align="center">
+    <%= will_paginate %>
+</div>
+
+<%= render 'article', obj: @articles %>
+
+<div align="center">
+    <%= will_paginate %>
+</div>
