--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="center jumbotron">
   <h1>Alpha Blog</h1>
   <%= link_to "Sign-up Now", signup_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+  &nbsp;
+  <%= link_to "Log-in", login_path, class: "btn btn-primary btn-lg btn-xlarge" %>
 </div>
 
 <!-- <%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %> --> 
