--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,24 @@
 <h1 align="center">All Alpha Bloggers</h1>
 
-<% @allusers.each do |user| %>
-    <ul class="listing">
-        <div class="row center">
-            <div class="well col-md-4 col-md-offset-4">
-                <li><%= link_to gravatar_for(user), user_path(user) %></li>
-                <li class="article-title">
-                    <%= link_to user.username, user_path(user) %>
-                </li>
-                <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
-            </div>
-        </div>
-    </ul>
+<div align="center">
+    
+    <%= will_paginate %>
 
-<% end %>
+    <% @users.each do |user| %>
+        <ul class="listing">
+            <div class="row center">
+                <div class="well col-md-4 col-md-offset-4">
+                    <li><%= link_to gravatar_for(user), user_path(user) %></li>
+                    <li class="article-title">
+                        <%= link_to user.username, user_path(user) %>
+                    </li>
+                    <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+                </div>
+            </div>
+        </ul>
+    
+    <% end %>
+    
+    <%= will_paginate %>
+
+</div>
