--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,7 +20,7 @@
     <%= simple_format(@article.description) %>
     
     <div class="article-actions">
-        <% if logged_in? && (current_user == @article.user || current_user.adming? %>
+        <% if logged_in? && (current_user == @article.user || current_user.adming?) %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
             &nbsp;
             <%= link_to "Delete", article_path(@article), method: :delete, 
